@@ -1,5 +1,8 @@
 2012-01-06  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
+	* gnus-art.el (gnus-article-browse-delete-temp-files): Fix up the
+	prompt to be less confusing.
+
 	* gnus-msg.el (gnus-summary-reply): Do not give a `switch-to-buffer'
 	argument to `message-reply'.  This broke `special-display-*' frame
 	pop-uping (bug#10238).
